--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "service-helpe-rs"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "MIT"
 
@@ -22,7 +22,7 @@ tracing-gelf= {version="0.7", optional = true}
 tokio = {version="^1.0", features=["rt"], optional = true}
 anyhow="1"
 thiserror="1"
-prometheus={version="0.13", optional = true}
+prometheus={version="0.13", features=["process"],  optional = true}
 log="0.4"
 warp={version="0.3", optional = true}
 atty={version="0.2", optional = true}
