--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "service-helpe-rs"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 
@@ -12,10 +12,12 @@ tracing-gelf=["dep:tracing-gelf", "tracing-log", "tracing-subscriber", "dep:toki
 metrics=["prometheus"]
 tokio=["dep:tokio"]
 warp=["dep:warp"]
-axum=["dep:axum", "http", "lazy_static", "futures"]
+axum=["dep:axum", "http", "lazy_static", "futures", "tower"]
 
 [dependencies]
 serde={version="^1.0", features=["derive"]}
+serde_yaml="0.9"
+envy = "0.4"
 tracing-subscriber = {version="0.3", features=["env-filter"], optional = true}
 tracing-log = {version="0.1", optional = true}
 tracing-gelf= {version="0.7", optional = true}
@@ -28,6 +30,7 @@ warp={version="0.3", optional = true}
 atty={version="0.2", optional = true}
 
 http={version="0.2", optional = true}
-axum = { version = "0.5", optional = true }
+axum = { version= "0.6.0-rc.2", optional = true }
+tower={version="0.4", optional=true}
 lazy_static={version="^1.4", optional=true}
 futures={version = "0.3", optional = true}
