--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ warp={version="0.3", optional = true}
 atty={version="0.2", optional = true}
 
 http={version="0.2", optional = true}
-axum = { version= "0.6.0-rc.2", optional = true }
+axum = { version= "^0.6.4", optional = true }
 tower={version="0.4", optional=true}
 lazy_static={version="^1.4", optional=true}
 futures={version = "0.3", optional = true}
