--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ metrics=["prometheus"]
 tokio=["dep:tokio"]
 warp=["dep:warp"]
 axum=["dep:axum", "http", "lazy_static", "futures", "tower"]
+tracing=["dep:tracing", "uuid", "data-encoding"]
 
 [dependencies]
 serde={version="^1.0", features=["derive"]}
@@ -21,6 +22,7 @@ envy = "0.4"
 tracing-subscriber = {version="0.3", features=["env-filter"], optional = true}
 tracing-log = {version="0.1", optional = true}
 tracing-gelf= {version="0.7", optional = true}
+tracing = { version = "0.1", optional = true }
 tokio = {version="^1.0", features=["rt"], optional = true}
 anyhow="1"
 thiserror="1"
@@ -34,3 +36,6 @@ axum = { version= "^0.6.4", optional = true }
 tower={version="0.4", optional=true}
 lazy_static={version="^1.4", optional=true}
 futures={version = "0.3", optional = true}
+
+uuid={version="1", features=["v4"], optional = true}
+data-encoding = {version = "2", optional = true}
