--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,10 @@ futures = { version = "0.3", optional = true }
 
 uuid = { version = "1", features = ["v4"], optional = true }
 data-encoding = { version = "2", optional = true }
-jsonwebtoken = { version = "8", optional = true }
+jsonwebtoken = { version = "10", optional = true, features = [
+    "aws_lc_rs",
+    "use_pem",
+] }
 serde_json = { version = "1", optional = true }
 
 
